--- a/src/style/Examples/FirstSection.module.scss
+++ b/src/style/Examples/FirstSection.module.scss
@@ -1,2 +1,35 @@
+@import "../global/index.scss";
+
 .firstSection {
+  @include section;
+  height: 75dvh;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 20px;
+  width: 100%;
+
+  .title {
+    @include title;
+    font-size: 30px;
+    font-weight: 550;
+  }
+}
+
+.examplesList {
+  display: flex;
+  align-items: center;
+  column-gap: 100px;
+  max-width: 100%;
+}
+
+@media (max-width: 1350px) {
+  .examplesList {
+    column-gap: 3%;
+    padding: 0 10px;
+  }
 }
