--- a/src/style/About.module.scss
+++ b/src/style/About.module.scss
@@ -21,6 +21,9 @@
     object-fit: cover;
     object-position: center;
     width: 350px;
+    border: 3px $secondary-background-color solid; //!
+    padding: 10px; //!
+    border-radius: 5px;
     transform: translateX(clamp(-20px, -5vw, -100px));
     // height: 100%; //!
   }
@@ -57,15 +60,18 @@
 }
 
 @media (max-width: $media-breakpoint) {
+  .about {
+    height: auto;
+  }
   .imageContainer {
     height: 50%;
     img {
-      border: 3px $secondary-background-color solid;
       padding: 10px;
       border-radius: 100%;
       height: 400px;
+      max-height: none;
       width: 400px;
-      transform: translateY(30px);
+      margin-top: 35px;
     }
   }
 
