--- a/src/style/Examples/ExampleItem.module.scss
+++ b/src/style/Examples/ExampleItem.module.scss
@@ -8,26 +8,32 @@
   row-gap: 15px;
   width: 100%;
   video {
-    height: 65dvh;
-    width: auto;
+    height: auto;
+    max-width: 350px;
+    max-height: 550px;
+    width: 100%;
     aspect-ratio: 9/16;
     object-fit: cover;
+    border-radius: 10px;
   }
+
   .active {
     object-fit: contain;
   }
 
   p {
     @include secondaryTitle(400);
-    font-size: 23px;
+    font-size: clamp(16px, 3.5vw, 23px);
   }
 }
 
 @media (max-width: 1350px) {
   .exampleItem {
+    max-width: 30%;
     video {
-      height: auto;
-      width: 100%;
+      height: 100%;
+      max-width: 100%;
+      width: auto;
     }
   }
 }
