--- a/src/style/Examples/FirstSection.module.scss
+++ b/src/style/Examples/FirstSection.module.scss
@@ -2,7 +2,7 @@
 
 .firstSection {
   @include section;
-  height: 75dvh;
+  height: auto;
 }
 
 .container {
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  row-gap: 20px;
+  row-gap: 30px;
   width: 100%;
 
   .title {
@@ -23,8 +23,10 @@
 .examplesList {
   display: flex;
   align-items: center;
+  justify-content: center;
   column-gap: 100px;
   max-width: 100%;
+  padding: 0 50px;
 }
 
 @media (max-width: 1350px) {
