--- a/src/style/Examples/SecondSection.module.scss
+++ b/src/style/Examples/SecondSection.module.scss
@@ -2,13 +2,28 @@
 
 .secondSection {
   @include section;
-  height: 75dvh;
-  margin-top: 120px;
+  height: auto;
 }
-
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 .examplesList {
   display: flex;
   align-items: center;
   column-gap: 50px;
   max-width: 100%;
+  justify-content: center;
+  width: 100%;
+}
+@media (max-width: 1350px) {
+  .examplesList {
+    column-gap: 3%;
+    padding: 0 10px;
+    flex-wrap: wrap;
+    row-gap: 100px;
+  }
 }
