--- a/src/style/Hero.module.scss
+++ b/src/style/Hero.module.scss
@@ -20,6 +20,7 @@
     object-fit: cover;
     object-position: center;
     width: 100%;
+    border-radius: 30px; //!
     // height: 100%; //!
   }
 }
@@ -54,7 +55,7 @@
     height: 70%;
 
     img {
-      border-radius: 5px;
+      // border-radius: 5px; //!
       max-width: 400px;
       width: 85%;
     }
