--- a/src/style/global/global.scss
+++ b/src/style/global/global.scss
@@ -1,5 +1,7 @@
 @import "./index.scss";
+@import "./resetCss.scss";
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Forum&display=swap");
+
 * {
   padding: 0;
   margin: 0;
