--- a/src/style/Examples/ExampleItem.module.scss
+++ b/src/style/Examples/ExampleItem.module.scss
@@ -8,10 +8,10 @@
   row-gap: 15px;
   width: 100%;
   video {
+    width: 100%;
     height: auto;
     max-width: 350px;
     max-height: 550px;
-    width: 100%;
     aspect-ratio: 9/16;
     object-fit: cover;
     border-radius: 10px;
@@ -35,5 +35,10 @@
       max-width: 100%;
       width: auto;
     }
+  }
+}
+@media (max-width: 500px) {
+  .exampleItem video {
+    max-height: 300px;
   }
 }
