--- a/src/style/UI/VideoPlayer.module.scss
+++ b/src/style/UI/VideoPlayer.module.scss
@@ -42,6 +42,14 @@
   transform: translateX(-50%) translateY(-50%);
   width: 80%;
   column-gap: 10%;
+  transition: all 0.1s ease-out;
+}
+
+.timeAndVolume.paused {
+  opacity: 0;
+}
+.player:hover .timeAndVolume {
+  opacity: 1;
 }
 
 .time {
@@ -49,6 +57,7 @@
   background-color: rgba(255, 255, 255, 0.4);
   height: 5px;
   border-radius: 5px;
+  cursor: pointer;
   .currentTime {
     border-radius: 5px;
     height: 100%;
@@ -66,6 +75,9 @@
     background-color: white;
     border-radius: 100%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  }
+  .currentTime.paused:after {
+    display: none;
   }
 }
 
