--- a/src/style/global/variables.scss
+++ b/src/style/global/variables.scss
@@ -1,6 +1,7 @@
-$background-color: #eeece6;
-$secondary-background-color: #d6d2c4;
+$background-color: #eee7dd;
+$secondary-background-color: #bcaa94;
 $title-color: #887b4e;
 $text-color: #625d4c;
+$decoration-color: #dac5b0;
 
 $media-breakpoint: 1000px;
