--- a/src/style/Hero.module.scss
+++ b/src/style/Hero.module.scss
@@ -59,6 +59,7 @@
   border-radius: 100%;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  user-select: none;
   .icon {
     height: auto;
     aspect-ratio: 1 / 1;
