--- a/src/style/global/mixin.scss
+++ b/src/style/global/mixin.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 100vh;
   // padding: clamp(20px, 5vw, 100px); //!
   padding: 50px;
   max-width: 1800px;
