--- a/src/style/MyHistory.module.scss
+++ b/src/style/MyHistory.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 110dvh;
+  min-height: 110vh;
   padding: 50px;
   max-width: 1200px;
   margin: auto;
