--- a/src/style/global/global.scss
+++ b/src/style/global/global.scss
@@ -7,10 +7,13 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+html {
+  max-width: 100vw;
+}
 body {
   background-color: $background-color;
   overflow-x: hidden;
+  max-width: 100vw;
 }
 body::-webkit-scrollbar {
   width: 5px;
