--- a/src/style/MyHistory.module.scss
+++ b/src/style/MyHistory.module.scss
@@ -62,7 +62,7 @@
   h1 {
     @include title;
     font-size: 35px;
-    font-weight: 550;
+    font-weight: 450;
   }
   p {
     @include text;
@@ -106,6 +106,7 @@
   background-color: $decoration-color;
   min-height: 250px;
   column-gap: 100px;
+  min-width: 100%;
   li {
     @include text;
     font-size: 16px;
@@ -118,6 +119,22 @@
     width: 16px;
     font-size: 23px;
     vertical-align: middle;
+  }
+}
+
+.languagesAndSkills.hebrew {
+  flex-direction: row-reverse;
+  text-align: end;
+  li:after {
+    content: "\2022";
+    color: $text-color;
+    display: inline-block;
+    width: 16px;
+    font-size: 23px;
+    vertical-align: middle;
+  }
+  li:before {
+    display: none;
   }
 }
 
@@ -152,7 +169,7 @@
   row-gap: 5px;
 
   li {
-    flex-basis: 50%;
+    flex-basis: calc(100% / 3);
     flex-shrink: 0;
     flex-grow: 0;
   }
@@ -178,6 +195,12 @@
     width: 100%;
     row-gap: 40px;
   }
+  .languagesAndSkills.hebrew {
+    flex-direction: column;
+    .skills {
+      padding-right: 45px;
+    }
+  }
   .languagesContainer,
   .skillsContainer {
     row-gap: 30px;
@@ -187,9 +210,11 @@
   .languages {
     row-gap: 5px;
     align-items: center;
+    min-width: 113px;
   }
   .skills {
     flex-direction: column;
+    min-width: 130px;
   }
 }
 
