--- a/src/style/Why.module.scss
+++ b/src/style/Why.module.scss
@@ -31,6 +31,7 @@
 .infoContainer {
   display: flex;
   flex-direction: column;
+
   justify-content: center;
   flex: 2;
   height: 100%;
@@ -38,12 +39,15 @@
   row-gap: 60px;
 }
 
-.textContainer {
-  position: relative;
-  .text {
-    @include text("light");
-    max-width: 80%;
-    font-size: clamp(16px, 3vw, 25px);
+.infoContainer.hebrew {
+  padding-right: 70px;
+  .titleContainer {
+    align-items: end;
+  }
+
+  .textContainer {
+    justify-content: end;
+    text-align: end;
   }
 }
 
@@ -61,6 +65,25 @@
   }
 }
 
+.textContainer {
+  display: flex;
+  position: relative;
+
+  .text {
+    @include text("light");
+    max-width: 80%;
+    font-size: clamp(16px, 3vw, 25px);
+  }
+}
+
+@media (max-width: 1300px) {
+  .infoContainer.hebrew {
+    .textContainer .text {
+      max-width: 100%;
+    }
+  }
+}
+
 @media (max-width: $media-breakpoint) {
   .why {
     flex-direction: column;
@@ -74,6 +97,18 @@
     align-items: center;
     text-align: center;
   }
+  .infoContainer.hebrew {
+    padding-right: 0;
+    .titleContainer {
+      align-items: center;
+    }
+
+    .textContainer {
+      justify-content: center;
+      text-align: center;
+    }
+  }
+
   .textContainer {
     display: flex;
     justify-content: center;
@@ -107,6 +142,7 @@
     position: absolute;
   }
 }
+
 @media (max-width: 500px) {
   .textContainer {
     .text {
