--- a/src/style/UI/LanguagesMenu.module.scss
+++ b/src/style/UI/LanguagesMenu.module.scss
@@ -59,9 +59,9 @@
 
 @media (max-width: $media-breakpoint) {
   .container {
-    position: fixed;
-    top: 30px;
-    right: 30px;
+    // position: fixed;
+    top: -10px;
+    right: -30vw;
   }
   .languagesBtn {
     span {
@@ -71,5 +71,15 @@
     .languagesIcon {
       font-size: 18px;
     }
+  }
+}
+@media (max-width: 550px) {
+  .container {
+    right: -25vw;
+  }
+}
+@media (max-width: 360px) {
+  .container {
+    right: -20vw;
   }
 }
