--- a/src/style/UI/LanguagesMenu.module.scss
+++ b/src/style/UI/LanguagesMenu.module.scss
@@ -59,12 +59,8 @@
 
 @media (max-width: $media-breakpoint) {
   .container {
-    // position: fixed;
     top: -10px;
-    right: -20vw;
-  }
-  .container.hebrew {
-    right: -30vw;
+    right: 30px;
   }
   .languagesBtn {
     span {
@@ -74,27 +70,5 @@
     .languagesIcon {
       font-size: 18px;
     }
-  }
-}
-@media (max-width: 600px) {
-  .container {
-    right: -10vw;
-  }
-  .container.hebrew {
-    right: -25vw;
-  }
-}
-@media (max-width: 450px) {
-  .container {
-    right: 0;
-  }
-}
-
-@media (max-width: 360px) {
-  .container {
-    // right: -20vw;
-  }
-  .container.hebrew {
-    right: -20vw;
   }
 }
