--- a/src/style/Hero.module.scss
+++ b/src/style/Hero.module.scss
@@ -54,11 +54,14 @@
     letter-spacing: 1px;
   }
 }
-
-.instagramContainer {
+.socialIcons {
   position: absolute;
   bottom: 0;
   right: 0;
+  display: flex;
+  column-gap: 15px;
+}
+.iconContainer {
   background-color: $title-color;
   display: flex;
   align-items: center;
@@ -71,11 +74,11 @@
   .icon {
     height: auto;
     aspect-ratio: 1 / 1;
-    width: 35px;
+    width: 25px;
     color: white;
   }
 }
-.instagramContainer:hover {
+.iconContainer:hover {
   transform: scale(1.1);
 }
 
@@ -95,7 +98,6 @@
     margin-bottom: -20px;
 
     img {
-      // border-radius: 5px; //!
       max-width: 400px;
       max-height: 100%;
       width: 85%;
@@ -108,11 +110,11 @@
     align-items: center;
     text-align: center;
   }
-  .instagramContainer {
+  .socialIcons {
     position: static;
     margin-top: 15px;
-    .icon {
-      width: 25px;
-    }
+  }
+  .iconContainer .icon {
+    width: 20px;
   }
 }
